# design-tokens

./: .gitattributes  Cargo.toml  DEVELOPING.md  README.md
design-tokens/: Cargo.toml
design-tokens/example/: figma-typography-extension.ts  figma.gen.ts  get-settings-json-to-stdout.ts  input.gen.ts  output.gen.ts  settings.ts
design-tokens/src/: cli.rs  main.rs  tokens.rs  typography.rs
design-tokens/src/typography/: css.rs  figma.rs  input.rs  output.rs  tailwind.rs
examples/: get-settings-json-to-stdout.ts  input.gen.ts  output.gen.ts  robotoMonoMetrics.ts  sample-output-data.ts  settings.ts  typography-input.gen.ts  typography-settings.ts
examples/figma/: figma-typography-config.ts  figma-typography-extension.ts  figma.gen.ts  generate-figma-text-styles.ts
examples/tailwind/: generate-tailwind-json-from-arg.ts
extensions/Here Now Figma/: .gitignore  DEVNOTES.md  build.cjs  manifest.json  package-lock.json  package.json  tsconfig.json
extensions/Here Now Figma/_archive/: figma-theme.css  generate-figma-text-styles.ts  hmm.ts  import-old.tsx  test-data.ts
extensions/Here Now Figma/plugin-src/: descriptionKey.ts  entry.ts  plugin.ts  tsconfig.json
extensions/Here Now Figma/protocol-types/: Cargo.toml
extensions/Here Now Figma/ui-src/: autocorrect.tsx  createUIState.ts  import.tsx  shared.css  (+2 more)
extensions/artprompt-reference/: .gitignore  README.md
extensions/variables-import-export/: .prettierrc  README.md  package.json  pnpm-lock.yaml  rollup.config.ts  svelte.config.js  tsconfig.json  tsconfig.node.json
xtask/: Cargo.toml
xtask/src/: main.rs
(+16 files in other folders)
