[workspace]
members = ["xtask", "design-tokens", "extensions/Here Now Figma/protocol-types"]

[workspace.package]
edition = "2021"
authors = ["Cole Lawrence <cole@colelawrence.com>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/colelawrence/design-tokens"
documentation = ""

[workspace.dependencies]
derive-codegen = { path = "vendor/derive-codegen/derive-codegen", version = "*" }
i-codegen-derive = { path = "vendor/derive-codegen/derive", version = "*" }
i-codegen-code = { path = "vendor/derive-codegen/code", version = "*" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
